Align beta banner with cookie one & fix images
Images now scale only when parent space is less than their set width.

IE6 fix also made global to give image more room.

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -238,8 +238,8 @@ body.government #global-header .header-context {
   display: none; /* shown with JS */
 }
 
-#global-cookie-message {
-  background-color: #D5E8F3;
+#global-cookie-message,
+.beta-notice {
   padding: 0.5em 0;
 
   p {
@@ -255,6 +255,15 @@ body.government #global-header .header-context {
   @include media(mobile) {
     padding: 0.5em 1em;
   }
+}
+
+#global-cookie-message {
+  background-color: $light-blue-25;
+}
+
+.beta-notice{
+  background-color: $orange;
+  color: #fff;
 }
 
 #global-breadcrumb {
